--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "onchange": "^2.5.0",
     "parallelshell": "^2.0.0",
     "react-addons-test-utils": "^15.3.0",
+    "theaterjs": "^3.1.0",
     "watchify": "^3.7.0"
   },
   "dependencies": {}
